lang/derive/tests/ui/fail/04-not-public.rs
use liquid_lang as liquid;

use liquid::InOut;
#[derive(InOut)]
struct MyStruct {
    i: i128,
}

fn main() {}
