lang/derive/tests/ui/fail/04-not-public.stderr
error: the visibility of type derived from `InOut` or `State` should be `pub`
 --> $DIR/04-not-public.rs:5:1
  |
5 | / struct MyStruct {
6 | |     i: i128,
7 | | }
  | |_^
